<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    tools:context="com.example.sournary.retrofitstackoverflow.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/item"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/Owner"
            android:textColor="@android:color/holo_blue_light" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Repulation" />

            <TextView
                android:id="@+id/tv_repulation"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/UserId" />

            <TextView
                android:id="@+id/tv_user_id"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/UserType" />

            <TextView
                android:id="@+id/tv_user_type"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/AcceptRate" />

            <TextView
                android:id="@+id/tv_accepte_rate"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/profile_image" />

            <TextView
                android:id="@+id/tv_profile_image"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/display_name" />

            <TextView
                android:id="@+id/tv_display_name"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/link" />

            <TextView
                android:id="@+id/tv_link_owner"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/is_answered"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv_is_answered"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/last_activity_date"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv_last_activity_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/creation_date"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv_creation_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/question_id"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv_question_id"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/last_edit_date"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv_last_edit_date"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical" />

        </TableRow>

    </LinearLayout>

</ScrollView>
